--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,10 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
+
+      - name: Fix Eleventy CLI permissions
+        run: chmod +x ./node_modules/.bin/eleventy
 
       - name: Build site
         run: npm run build
