--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@11ty/eleventy": "^3.1.0"
   },
   "dependencies": {
+    "glightbox": "^3.3.1",
     "iso-639-1": "^3.1.5",
-    "luxon": "^3.6.1"
+    "luxon": "^3.6.1",
+    "photoswipe": "^5.4.4"
   }
 }
