--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.6",
+    "electron": "^36.5.0",
     "express": "^5.1.0",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "glightbox": "^3.3.1",
     "iso-639-1": "^3.1.5",
     "luxon": "^3.6.1",
