--- a/helpers/tl_tool/package.json
+++ b/helpers/tl_tool/package.json
@@ -8,10 +8,12 @@
   "dependencies": {
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
-    "electron": "^28.0.0",
     "ffmpeg-static": "^5.1.0",
     "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.2",
     "googleapis": "^153.0.0"
+  },
+  "devDependencies": {
+    "electron": "28.3"
   }
 }
