--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "eleventy",
     "build:dev": "cross-env ELEVENTY_ENV=dev eleventy",
     "serve:dev": "cross-env ELEVENTY_ENV=dev eleventy --serve",
-    "serve:static": "npx -y http-server@14 ./public -p 8080 -c-1"
+    "serve:static": "npx -y http-server@14 ./public -p 8080 -c-1",
     "test:e2e": "playwright test",
     "test:ui": "playwright test --ui",
     "test:update": "playwright test -u"
