--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,15 +1,18 @@
 name: E2E
 
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
+  workflow_run:
+    workflows: ["Build and Deploy Eleventy"]
+    types: [completed]
 
 jobs:
   tests:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Wait a bit for Pages to propagate
+        run: sleep 300
+
       - name: Checkout
         uses: actions/checkout@v4
 
