--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -2,7 +2,7 @@ name: E2E
 
 on:
   workflow_run:
-    workflows: ["Build and Deploy Eleventy"]
+    workflows: ["pages-build-deployment"]
     types: [completed]
 
 jobs:
