--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Run tests
         run: npm run test:e2e
         env:
-          PLAYWRIGHT_BASE_URL: 'https://megavortex.github.io/tradelist'
+          PLAYWRIGHT_BASE_URL: 'https://megavortex.github.io'
 
       - name: Upload HTML report
         if: always()
